fix color contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -829,8 +829,12 @@ footer {
 }
 
 .social-icon:hover {
-    background-color: var(--color-light);
+    background-color: var(--color-soft-peach);
     transform: scale(1.1);
+}
+
+.social-icon:hover img {
+    filter: brightness(0);
 }
 
 
